2010-05-03  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Dan Bernstein.

        REGRESSION: Text clipped in absolutely positioned search inputs
        https://bugs.webkit.org/show_bug.cgi?id=38468

        Update the test to include a second search field and show
        the clipping of a search input is like a text input.

        * fast/css/input-search-padding.html:
        * platform/mac/fast/css/input-search-padding-expected.checksum:
        * platform/mac/fast/css/input-search-padding-expected.png:
        * platform/mac/fast/css/input-search-padding-expected.txt:

2010-05-03  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Dan Bernstein.

        REGRESSION: Text clipped in absolutely positioned search inputs
        https://bugs.webkit.org/show_bug.cgi?id=38468

        Previously I incorrectly added x() and y() to the tx and ty positioning.
        This clips a search input like a text input, respecting the vertically
        centered text.

        * rendering/RenderTextControlSingleLine.cpp:
        (WebCore::RenderTextControlSingleLine::layout): only the Y changes, so change setLocation to setY
        (WebCore::RenderTextControlSingleLine::controlClipRect):

Canonical link: https://commits.webkit.org/50017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58762 268f45cc-cd09-0410-ab3c-d52691b4dbfc